backend/agent-runtime/crates/winkgo-agent-providers/src/snapshots/winkgo_agent_providers__bedrock__tests__bedrock_with_tools.snap
---
source: crates/winkgo-agent-providers/src/bedrock.rs
expression: p.build_request_body(&r)
---
{
  "anthropic_version": "bedrock-2023-05-31",
  "max_tokens": 8192,
  "messages": [
    {
      "content": [
        {
          "text": "go",
          "type": "text"
        }
      ],
      "role": "user"
    }
  ],
  "system": "You are a test assistant.",
  "tools": [
    {
      "description": "Read",
      "input_schema": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "properties": {
          "path": {
            "type": "string"
          }
        },
        "type": "object"
      },
      "name": "read"
    }
  ]
}
